2006-12-09  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/startup.py (Follower._failure): add missing
	import statement for BuildSlaveDetectedError

	* buildbot/steps/transfer.py (FileUpload): cleanup
	(FileDownload): same. Add tests for slave version, add mode=.
	* buildbot/slave/commands.py (SlaveFileUploadCommand): same
	(SlaveFileDownloadCommand): same
	* buildbot/test/test_transfer.py: enhance tests
	* buildbot/test/runutils.py (makeBuildStep): create a fake form of
	step.slaveVersion

2006-12-08  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py (sendchange): halt the reactor on
	both success *and* failure. Without this, the 'buildbot
	sendchange' command would hang if it could not contact the
	buildmaster or deliver the Change, which would generally cause the
	user's commit/record/checkin command to hang too. Thanks to
	Christian Unger for the catch.

2006-12-06  Brian Warner  <warner@lothar.com>

	* NEWS: update with items for the next release

	* docs/buildbot.texinfo (Adding LogObservers): add a somewhat
	whimsical example pulled from a punch-drunk email I sent out late
	one night.
	(Transferring Files): document some of the other parameters
	(Adding LogObservers): update to 0.7.5 buildbot.steps.*
	(SVNPoller): rename svnpoller.SvnSource to SVNPoller
	* buildbot/test/test_svnpoller.py: same
	* buildbot/changes/svnpoller.py (SVNPoller): same

2006-11-26  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Build Properties): remind users that
	WithProperties must appear in a command= list, not as a top-level
	instance.
	* buildbot/steps/shell.py (ShellCommand.start): and assert that
	we're sending a list or a single string to the RemoteShellCommand

	* buildbot/scheduler.py (Nightly): Improve docs slightly.

	* buildbot/scripts/startup.py (start): skip the whole
	watch-the-logfile thing under windows, since it needs os.fork()

	* buildbot/scripts/runner.py (restart): remove the old message